scenarios/04-route-admission/http-https-tls-implicit-kinds/33-reference-grants.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-system-httproutes
  namespace: backend-a
  labels:
    app.kubernetes.io/part-of: demo
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: gateway-system
  to:
    - group: ""
      kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-system-tlsroutes
  namespace: backend-b
  labels:
    app.kubernetes.io/part-of: demo
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: TLSRoute
      namespace: gateway-system
  to:
    - group: ""
      kind: Service
